--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,15 @@
+amqp==2.1.4
 appdirs==1.4.3
+Babel==2.4.0
+billiard==3.5.0.2
+celery==4.0.2
 Django==1.11
+flower==0.9.1
+kombu==4.0.2
 packaging==16.8
 pyparsing==2.2.0
 pytz==2017.2
+redis==2.10.5
 six==1.10.0
+tornado==4.2
+vine==1.1.3
