--- a/Dockerfile_worker_master
+++ b/Dockerfile_worker_master
@@ -16,4 +16,6 @@ COPY production/worker/supervisord.conf /etc/supervisor/conf.d/supervisord.conf
 COPY production/worker/celerybeat.conf /etc/supervisor/conf.d/celerybeat.conf
 COPY production/worker/flower.conf /etc/supervisor/conf.d/flower.conf
 
+EXPOSE 5555
+
 CMD ["/usr/bin/supervisord"]
