--- a/production/worker/celerybeat.conf
+++ b/production/worker/celerybeat.conf
@@ -17,6 +17,6 @@ stderr_logfile=/dev/stderr
 stderr_logfile_maxbytes=0
 stdout_events_enabled = true
 stderr_events_enabled = true
-autostart=true
-autorestart=true
+autostart=%(ENV_MASTER_WORKER)s
+autorestart=%(ENV_MASTER_WORKER)s
 startsecs=10
