--- a/production/worker/flower.conf
+++ b/production/worker/flower.conf
@@ -1,6 +1,6 @@
 [program:flower]
 
-command=celery flower -A django_example --port=5555 --broker=redis://localhost:6379
+command=celery flower -A django_example --port=5555 --broker=%(ENV_CELERY_BROKER_URL)s
 
 ; Use environment variable to provide auth and broker url.
 ; command=celery flower -A django_example --port=5555 --basic_auth=%(ENV_FLOWER_USER)s:%(ENV_FLOWER_PWD)s --broker=%(ENV_CELERY_BROKER_URL)s
@@ -14,6 +14,6 @@ stderr_logfile=/dev/stderr
 stderr_logfile_maxbytes=0
 stdout_events_enabled = true
 stderr_events_enabled = true
-autostart=true
-autorestart=true
+autostart=%(ENV_MASTER_WORKER)s
+autorestart=%(ENV_MASTER_WORKER)s
 startsecs=10
