--- a/production/supervisor/celeryd.conf
+++ b/production/supervisor/celeryd.conf
@@ -20,8 +20,8 @@ stderr_logfile=/dev/stderr
 stderr_logfile_maxbytes=0
 stdout_events_enabled = true
 stderr_events_enabled = true
-autostart=true
-autorestart=true
+autostart=%(ENV_WORKER)s
+autorestart=%(ENV_WORKER)s
 startsecs=10
 
 ; Need to wait for currently executing tasks to finish at shutdown.
