--- a/production/nginx/django.conf
+++ b/production/nginx/django.conf
@@ -13,7 +13,7 @@ server {
     listen      80;
 
     location /static/ {
-        root /django_example;
+        alias /django_example/static/;
     }
 
     location / {
