--- a/production/supervisor/gunicorn.conf
+++ b/production/supervisor/gunicorn.conf
@@ -1,6 +1,6 @@
 [program:gunicorn]
-command=/usr/bin/gunicorn django_example.wsgi -w 4 -b 127.0.0.1:8000 --access-logfile=- --max-requests 100000 --max-requests-jitter 10000
-directory=/django_example
+command=/usr/bin/gunicorn django_example.wsgi -w 4 -b 127.0.0.1:8000 --access-logfile=-
+directory=/django_examp
 stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
 stderr_logfile=/dev/stderr
