--- a/production/supervisor/celeryd.conf
+++ b/production/supervisor/celeryd.conf
@@ -11,7 +11,7 @@ command=celery worker -A django_example --loglevel=INFO
 ; Or run a script
 ;command=celery.sh
 
-directory=/django_example
+directory=/app
 user=nobody
 numprocs=1
 stdout_logfile=/dev/stdout
