--- a/production/supervisor/flower.conf
+++ b/production/supervisor/flower.conf
@@ -5,7 +5,7 @@ command=celery flower -A django_example --port=5555 --broker=%(ENV_CELERY_BROKER
 ; Use environment variable to provide auth and broker url.
 ; command=celery flower -A django_example --port=5555 --basic_auth=%(ENV_FLOWER_USER)s:%(ENV_FLOWER_PWD)s --broker=%(ENV_CELERY_BROKER_URL)s
 
-directory=/django_example
+directory=/app
 user=nobody
 numprocs=1
 stdout_logfile=/dev/stdout
