--- a/production/supervisor/celerybeat.conf
+++ b/production/supervisor/celerybeat.conf
@@ -8,7 +8,7 @@ command=celery beat -A django_example --loglevel=INFO --pidfile="/tmp/celerybeat
 
 ; remove the -A myapp argument if you are not using an app instance
 
-directory=/django_example
+directory=/app
 user=nobody
 numprocs=1
 stdout_logfile=/dev/stdout
